--- a/src/main/webapp/resources/css/modal.css
+++ b/src/main/webapp/resources/css/modal.css
@@ -107,6 +107,7 @@
     background-color: #EBEBEB;
     opacity: 0.7;
     border-radius: 10px;
+    border: 1px solid #ccc;
     animation: fadeOutAndIn 5s ease-in-out;
     display: none;
 }
