--- a/src/main/webapp/resources/css/main.css
+++ b/src/main/webapp/resources/css/main.css
@@ -42,7 +42,7 @@
   	margin-bottom: 20px; 
   }
   .table3{
-  	background-color:#D9D9D9;
+  	background-color:#F5F5F5;
   	border-radius: 30px; 
  	width:100%;
   	
@@ -50,11 +50,20 @@
   
   #please{
    	overflow-y:scroll; 
-  	height:340px;
+  	height:310px;
  	width:80%;
  	margin:auto;
  	border-radius: 30px; 
   }
+  .intro{
+  	margin:auto;
+  	width:80%;
+  	border-radius: 30px;
+  	background-color:#FFF6FD;
+  	text-align: center;
+  	padding-bottom:5px;
+  }
+
   
   td {
       /* border: 1px solid #444444;  */
@@ -165,13 +174,13 @@
  } 
  #cnt{
  	font-size:28px;
- 	padding-left:3%;
+ 	padding-left:7%;
  }
   #cmtBox{
  	width: 86%;/* calc(50% - 10px) */
  	height:40px;
  	background-color: rgba(215, 215, 215, 0.29);
- 	margin-left:10px;
+ 	margin-left:8%;
  } 
  .input{
  	width:80%; 
@@ -202,7 +211,7 @@
 	font-size:26px;
 	box-shadow:0px 4px 4px 0px #CBCBCB;
 	border-radius:20px;
-	margin-left: 11px; 수정: 왼쪽 여백 추가
+	margin-left: 25%;
 	
 }
 #cmtCount{
@@ -221,4 +230,13 @@
     padding-left: 5px;
     font-size:200%;
     color:#9E9A9A;
+	}
+	
+	#gom{
+		width:10%;
+		height:10%;
+	}
+	#git{
+		width:6%;
+		height:6%;
 	}
